# utbot_execurot

./: .gitingore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
deep_serialization/: deep_serialization.py  json_converter.py  memory_objects.py  test_json.json  utils.py
utbot_executor/: __main__.py  executor.py  listener.py  listener_single_socket.py  memory_compressor.py  parser.py  serializer.py  tests.py  ut_tracer.py
utbot_executor/deep_serialization/: deep_serialization.py  example.py  json_converter.py  memory_objects.py  numpy_serialization.py  test_json.json  tests.py  utils.py
utbot_executor/tests/: tests.py
