[tool.poetry]
name = "utbot-executor"
version = "1.1.12"
description = ""
authors = ["Vyacheslav Tamarin <vyacheslav.tamarin@yandex.ru>"]
readme = "README.md"
packages = [{include = "utbot_executor"}]

[tool.poetry.dependencies]
python = "^3.7"
coverage = "^6.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
utbot-executor = "utbot_executor:utbot_executor"
