[tool.poetry]
name = "utbot-executor"
version = "1.5.4"
description = ""
authors = ["Vyacheslav Tamarin <vyacheslav.tamarin@yandex.ru>"]
readme = "README.md"
packages = [{include = "utbot_executor"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
utbot-executor = "utbot_executor:utbot_executor"
